# ohayou-cli

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  seam-carving.cpp
includes/blur/: average.hpp  gaussian.hpp  motion.hpp
includes/photo-filter/: brightness.hpp  duo-tone.hpp  oil-paint.hpp  sepia.hpp  splash.hpp  white-balance.hpp
includes/preset/: summer.hpp
samples/: cartoon.cpp  cli-options.cpp  edge-dection.cpp  main-slider.cpp  super-res.cpp
